--- a/style.css
+++ b/style.css
@@ -1,6 +1,47 @@
+html{
+    scroll-behavior: smooth;
+}
 body{
-    background: linear-gradient(to right, #02aab0, #00cdac);
+    background: linear-gradient(to right, #333, #0b6d70, #333);
 }
 .custom-scrollbar-js{
     height: 200px;
+}
+
+
+#nav-links ul{
+    background: linear-gradient(to right, #333, #0b6d70, #333);
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    padding: 10px;
+    margin: 0px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    list-style: none;
+    width: 100vw;
+    z-index: 1;
+    
+}
+#nav-links a{
+        color:#f4f4f4;
+        transition: .7s;
+        text-decoration: underline transparent;
+
+}
+#nav-links a:hover{
+    transition: .7s;
+}
+footer{
+    color: #f4f4f4;
+    text-align: center;
+    padding: 10px;
+    font-size: 1.3rem;
+}
+span{
+    color: crimson;
 }
