--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&family=Rokkitt:wght@400;600&family=Sriracha&family=Tangerine:wght@400;700&display=swap');
+
 html{
     scroll-behavior: smooth;
 }
@@ -7,11 +9,40 @@ body{
 .custom-scrollbar-js{
     height: 200px;
 }
+.row h1{
+    font-family: 'Tangerine', cursive;
+    /* font-family: 'Merienda', cursive; */
+    font-size: 6em;
+    font-weight: 600;
+}
+.card h2{
 
+    font-family: 'Tangerine', cursive;
+    font-size: 5em;
+    font-weight: 400;
+}
+.card h4{
+    font-family: 'Merienda', cursive;
+    font-size: 1.6em;
+    font-weight: 700;
+}
+.card h5{
+    font-size: 1.4em;
+    font-weight: 400;
+    font-family: 'Merienda', cursive;
 
+}
+.card p{
+    font-family: 'Sriracha', cursive;
+    font-size: 1.3em;
+    text-decoration: underline;
+}
+.p-2 p{
+    font-family: 'Merienda', cursive;
+    text-decoration: none;
+}
 #nav-links ul{
     background: linear-gradient(to right, #333, #0b6d70, #333);
-    
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -28,6 +59,8 @@ body{
     
 }
 #nav-links a{
+        font-family: 'Sriracha', cursive;
+        font-size: 1.4em;
         color:#f4f4f4;
         transition: .7s;
         text-decoration: underline transparent;
@@ -44,4 +77,10 @@ footer{
 }
 span{
     color: crimson;
+}
+
+
+@media screen and (max-width: 450px) {
+
+
 }
